completed lab 9 - Documentation setup
- Added Sphinx to requirements.txt
- Set up Sphinx documentation structure in labs/lab-9/docs/
- Created documentation pages:
  * introduction.rst - Overview and getting started
  * development.rst - Development environment setup
  * resources.rst - Helpful resources and documentation links
  * troubleshooting.rst - Common issues and solutions
- Configured conf.py with project information
- Created Makefile and make.bat for building documentation
- Added deployment script and instructions for GitHub Pages
- Updated .gitignore to exclude build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,11 @@ venv.bak/
 
 # mac
 .DS_Store
+
+# Sphinx documentation build output
+labs/lab-9/docs/_build/
+docs/
+
+# GitHub Pages
+.nojekylllabs/lab-9/docs/_build/
+.nojekyll
