--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ MarkupSafe==2.1.5
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 SQLAlchemy==2.0.34
+Sphinx>=7.0.0
 typing_extensions==4.12.2
 Werkzeug==3.0.4
 zipp==3.20.2
